added/edited home page

--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -23,7 +23,7 @@
 
             /* Style the topnav links */
             .topnav a {
-                float: left;
+                float: right;
                 display: block;
                 color: #f2f2f2;
                 text-align: center;
@@ -41,6 +41,22 @@
             .content {
                 background-color: #f1f1f1;
                 padding: 10px;
+                background-image: url("Background.jpg");
+                height: 100vh;
+                background-size: cover;
+                background-position: center center;
+            }
+            .content h1{
+                color: #ddd;
+                text-align: center;
+                
+            }
+            .content p{
+                text-align: center;
+                color: #ddd;
+            }
+            .content hr{
+                width: 30%;
             }
 
             /* Style the footer */
@@ -58,8 +74,13 @@
         </div>
 
         <div class="content">
+            <h1>SAFETY ANALYSIS TOOL</h1>
+            <hr>
+            <p>Help Us Make The World a Safer Place </p>
+            <!--
             <h2>Home Page</h2>
             <p>To identify/correct safety issues with autonomous systems (e.g., self-driving cars, drones, etc.) a safety analysis tool has been implemented. There are existing tools that are used to identify these safety issues. Our goal is to implement a helpful and easy-to-use web-based graphical user interface (GUI), which will incorporate the safety analysis tool’s backend. We do this with the intent of giving researchers and engineers ease of access to software that will not only make their work better but also people’s lives safer.</p>
+            -->
         </div>
         <div class="footer">
             <p>Contact us</p>
