added DetailsSys, login, and base html files. moved what was is index to base so that it can be used as a base for most of the pages that we need. also messed around with the login page just because I wanted to get things added

--- a/proj/templates/DetailsSys.html
+++ b/proj/templates/DetailsSys.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block user %}<a href="#UserInfo">{{usr}}</a>{% endblock %}
-{% block pageTitle %}SAFETY ANALYSIS TOOL{% endblock %}
+{% block pageTitle %}Details of Systems{% endblock %}
 {% block content %}
-<p>Help Us Make The World a Safer Place</p>
+<p>this is where the details will go eventually</p>
 {% endblock %}
