--- a/proj/templates/Login.html
+++ b/proj/templates/Login.html
@@ -2,8 +2,14 @@
 {% block pageTitle %}Login{% endblock %}
 {% block content %}
 <form action="#" method="post">
-  <p>Name: <input type="text" name="nm" /></p>
-  <p>Email: <input type="text" name="em" /></p>
+  <p>Email: <input type="text" name="email" /></p>
+  <p>Password: <input type="text" name="pass" /></p>
   <p><input type="submit" value="submit" /></p>
 </form>
+<hr>
+<h1> OR </h1>
+<hr>
+<p>
+  <a href="/register"><button class="regi" type="button">Create new account</button></a>
+</p>
 {% endblock %}
