--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -58,6 +58,82 @@
             .content hr{
                 width: 30%;
             }
+            .regi {
+                border: 0;
+                line-height: 2.5;
+                padding: 0 20px;
+                font-size: 1rem;
+                text-align: center;
+                color: #fff;
+                text-shadow: 1px 1px 1px #000;
+                border-radius: 10px;
+                background-color: rgba(0, 235, 0, 1);
+                box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                            inset -2px -2px 3px rgba(0, 0, 0, .6);
+            }
+            .regi:hover{
+                background-color: rgba(0, 255, 0, 1);
+            }
+            .regi:active{
+                box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                            inset 2px 2px 3px rgba(0, 0, 0, .6);
+            }
+            .facebook{
+                border: 0;
+                line-height: 3;
+                padding: 0 15px;
+                text-align: center;
+                color: white;
+                text-shadow: 1px 1px 1px black;
+                border-radius: 10px;
+                background-color: #3b5998;
+                box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                            inset -2px -2px 3px rgba(0, 0, 0, .6);
+            }
+            .facebook:hover{
+                background-color: rgba(50, 110, 200, 1);
+            }
+            .facebook:active{
+                box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                            inset 2px 2px 3px rgba(0, 0, 0, .6);
+            }
+            .google{
+              border: 0;
+              line-height: 3;
+              padding: 0 15px;
+              text-align: center;
+              color: #fff;
+              border-radius: 10px;
+              background-color: rgba(255, 255, 255, 1);
+              box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                          inset -2px -2px 3px rgba(0, 0, 0, .6);
+            }
+            .google:hover{
+              background-color: rgba(0, 180, 255, 0);
+            }
+            .google:active{
+                box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                            inset 2px 2px 3px rgba(0, 0, 0, .6);
+            }
+            .twitter{
+              border: 0;
+              line-height: 3;
+              padding: 0 15px;
+              text-align: center;
+              color: #fff;
+              text-shadow: 1px 1px 1px #000;
+              border-radius: 10px;
+              background-color: #00acee;
+              box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                          inset -2px -2px 3px rgba(0, 0, 0, .6);
+            }
+            .twitter:hover{
+              background-color: rgba(0, 180, 255, 1);
+            }
+            .twitter:active{
+              box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                          inset 2px 2px 3px rgba(0, 0, 0, .6);
+            }
 
             /* Style the footer */
             .footer {
@@ -67,12 +143,13 @@
         </style>
     </head>
     <body>
-      <div class="topnav">
+        <div class="topnav">
           {% block user %}{% endblock %}
           <a href="#SafetyRelatedData">Safety-related Data</a>
           <a href="#SafetyAnalysisTool">Safety Analysis Tool</a>
-          <a href="#DetailsSys">Details of the System</a>
-      </div>
+          <a href="/detailsSys">Details of the System</a>
+          <a href="/">Home</a>
+        </div>
 
         <div class="content">
           <h1>{% block pageTitle %}{% endblock %}</h1>
