--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -13,7 +13,7 @@
             body {
                 margin: 0;
                 font-family: Arial, Helvetica, sans-serif;
-            }
+              }
 
             /* Style the top navigation bar */
             .topnav {
@@ -41,7 +41,7 @@
             .content {
                 background-color: #f1f1f1;
                 padding: 10px;
-                background-image: url("Background.jpg");
+                background-image: url("/Background.jpg");
                 height: 100vh;
                 background-size: cover;
                 background-position: center center;
