--- a/proj/templates/register.html
+++ b/proj/templates/register.html
@@ -2,7 +2,9 @@
 {% block pageTitle %}Register{% endblock %}
 {% block content %}
 <form action="#" method="post">
-  <p>Name: <input type="text" name="nm" /></p>
+  <p>First Name: <input type="text" name="fnm" /></p>
+  <p>Last Name: <input type="text" name="lnm" /></p>
+  <p>Phone#:  <input type="text" name="phone" /></p>
   <p>Email: <input type="text" name="email" /></p>
   <p>Password: <input type="text" name="pass" /></p>
   <p><input type="submit" value="submit" /></p>
