made pages for each button on the Safetly Related data page. changed some of the base.html

--- a/proj/templates/register.html
+++ b/proj/templates/register.html
@@ -4,7 +4,7 @@
 <form action="#" method="post">
   <p>First Name: <input type="text" name="fnm" /></p>
   <p>Last Name: <input type="text" name="lnm" /></p>
-  <p>Phone#:  <input type="text" name="phone" /></p>
+  <p>Phone #:  <input type="text" name="phone" /></p>
   <p>Email: <input type="text" name="email" /></p>
   <p>Password: <input type="text" name="pass" /></p>
   <p><input type="submit" value="submit" /></p>
@@ -12,7 +12,7 @@
 <hr>
 <h1> OR </h1>
 <hr>
-<p>register with one of these:
+<p>Sign up with one of these:
   <button class="facebook" type="button">Facebook</button>
   <button class="google" type="button"> <span style="color: rgba(72, 133, 237, 1);">G</span><span style="color: rgba(219, 50, 54, 1);">o</span><span style="color: rgba(244, 194, 13, 1);">o</span><span style="color: rgba(72, 133, 237, 1);">g</span><span style="color: rgba(60, 186, 84, 1);">l</span><span style="color: rgba(219, 50, 54, 1);">e</span></button>
   <button class="twitter" type="button">Twitter</button>
