--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -143,6 +143,10 @@
               text-shadow: 1px 1px 1px #000;
               border-radius: 10px;
               background-color: lightgrey;
+              background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
               box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                           inset -2px -2px 3px rgba(0, 0, 0, .6);
             }
@@ -165,7 +169,7 @@
         <div class="topnav">
           {% block user %}{% endblock %}
           <a href="/safetyRelatedData">Safety-related Data</a>
-          <a href="#SafetyAnalysisTool">Safety Analysis Tool</a>
+          <a href="/safetyAnalysisTool">Safety Analysis Tool</a>
           <a href="/detailsSys">Details of the System</a>
           <a href="/">Home</a>
         </div>
