--- a/proj/templates/safetyRelatedData.html
+++ b/proj/templates/safetyRelatedData.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
-{% block pageTitle %}Safety Related Data{% endblock %}
+{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+{% block pageTitle %}Safety-Related Data{% endblock %}
 {% block content %}
+<p>Select what you would like to do:</p>
 <p>
-  <button class="regular" type="button">Add Data to a Table</button>
-  <button class="regular" type="button">Change Access Permissions</button>
-  <button class="regular" type="button">Save Details to a Database</button>
+  <a href="/safetyRelatedData/addDataToTable"><button class="regular" type="button">Add Data to a Table</button></a>
+  <a href="/safetyRelatedData/changeAccessPerms"><button class="regular" type="button">Change Access Permissions</button></a>
+  <a href="/safetyRelatedData/saveDetailsToDB"><button class="regular" type="button">Save Details to a Database</button></a>
 </p>
 {% endblock %}
