addes html pages for the Safety Analysis Tool page buttons. Also commented the user out of each of the html files because it was silly to put it in every file just because the login and register pages didnt need it.

--- a/proj/templates/addDataToTable.html
+++ b/proj/templates/addDataToTable.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}Add Data to a Table{% endblock %}
 {% block content %}
 <p>Select what you would like to do:</p>
