--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -167,7 +167,7 @@
     </head>
     <body>
         <div class="topnav">
-          {% block user %}{% endblock %}
+          <a href="/login">{{usr}}</a>
           <a href="/safetyRelatedData">Safety-related Data</a>
           <a href="/safetyAnalysisTool">Safety Analysis Tool</a>
           <a href="/detailsSys">Details of the System</a>
