--- a/proj/templates/login.html
+++ b/proj/templates/login.html
@@ -12,4 +12,7 @@
 <p>
   <a href="/register"><button class="regi" type="button">Create new account</button></a>
 </p>
+<p>
+  <a href="/"><button class="regular" type="button">Continue as Guest</button></a>
+</p>
 {% endblock %}
