--- a/proj/templates/saveDetailsToDB.html
+++ b/proj/templates/saveDetailsToDB.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}Save Details to The Database{% endblock %}
 {% block content %}
 <p>Upload the details that you would like to save to your account</p>
