--- a/proj/templates/changeAccessPerms.html
+++ b/proj/templates/changeAccessPerms.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}Change Access Permissions{% endblock %}
 {% block content %}
 <p>Select the data results that you would like to change the permissions of:</p>
