--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}SAFETY ANALYSIS TOOL{% endblock %}
 {% block content %}
 <p>Help Us Make The World a Safer Place</p>
