--- a/proj/templates/safetyRelatedData.html
+++ b/proj/templates/safetyRelatedData.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block user %}<a href="/login">{{usr}}</a>{% endblock %}
+<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}Safety-Related Data{% endblock %}
 {% block content %}
 <p>Select what you would like to do:</p>
