added a previous button to any of the pages that dont come form the home page. added a login button to the register page

--- a/proj/templates/addDataToTable.html
+++ b/proj/templates/addDataToTable.html
@@ -7,4 +7,5 @@
   <button class="regular" type="button">Use a Predefined Template</button>
   <button class="regular" type="button">Create a New Template</button>
 </p>
+<a href="/safetyRelatedData"><button class="regular" type="button">Previous</button></a>
 {% endblock %}
