--- a/proj/templates/addNewSys.html
+++ b/proj/templates/addNewSys.html
@@ -3,4 +3,5 @@
 {% block pageTitle %}Add New System{% endblock %}
 {% block content %}
 <p>this is one of the places where we need the user to fill in tables with info</p>
+<a href="/safetyRelatedData"><button class="regular" type="button">Previous</button></a>
 {% endblock %}
