--- a/proj/templates/register.html
+++ b/proj/templates/register.html
@@ -17,4 +17,6 @@
   <button class="google" type="button"> <span style="color: rgba(72, 133, 237, 1);">G</span><span style="color: rgba(219, 50, 54, 1);">o</span><span style="color: rgba(244, 194, 13, 1);">o</span><span style="color: rgba(72, 133, 237, 1);">g</span><span style="color: rgba(60, 186, 84, 1);">l</span><span style="color: rgba(219, 50, 54, 1);">e</span></button>
   <button class="twitter" type="button">Twitter</button>
 </p>
+<p>Already have an account?</p>
+<p><a href="/login"><button class="regular" type="button">Login</button></a></p>
 {% endblock %}
