--- a/proj/templates/uploadExistingSys.html
+++ b/proj/templates/uploadExistingSys.html
@@ -9,4 +9,5 @@
     <button class="regular" type="button">Upload an existing system</button>
     <button class="regular" type="button">Upload a system for database</button>
 </p>
+<a href="/safetyAnalysisTool"><button class="regular" type="button">Previous</button></a>
 {% endblock %}
