--- a/proj/templates/changeAccessPerms.html
+++ b/proj/templates/changeAccessPerms.html
@@ -4,4 +4,5 @@
 {% block content %}
 <p>Select the data results that you would like to change the permissions of:</p>
 <p>There will be a list of results on this page</p>
+<a href="/safetyRelatedData"><button class="regular" type="button">Previous</button></a>
 {% endblock %}
