--- a/proj/templates/safetyAnalysisTool.html
+++ b/proj/templates/safetyAnalysisTool.html
@@ -4,7 +4,7 @@
 {% block content %}
 <p>Select the method for entering your data:</p>
 <p>
-  <a href="/safetyAnalysisTool/uploadExistingSys/"><button class="regular" type="button">Upload Existing Table</button></a>
+  <a href="/safetyAnalysisTool/uploadExistingSys/"><button class="regular" type="button">Upload Existing System</button></a>
   <a href="/safetyAnalysisTool/addNewSys/"><button class="regular" type="button">Add a New System</button></a>
   <a href="/safetyAnalysisTool/loadFromDB/"><button class="regular" type="button">Load from Database</button></a>
 </p>
