--- a/proj/templates/saveDetailsToDB.html
+++ b/proj/templates/saveDetailsToDB.html
@@ -4,4 +4,5 @@
 {% block content %}
 <p>Upload the details that you would like to save to your account</p>
 <p>There will be an upload feature here</p>
+<a href="/safetyRelatedData"><button class="regular" type="button">Previous</button></a>
 {% endblock %}
