--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -159,9 +159,35 @@
             }
 
             /* Style the footer */
-            .footer {
+            .contact {
                 background-color: #ddd;
                 padding: 10px;
+            }
+            .main-box{
+                position: relative;
+                width: 100%;
+                margin-bottom: 10px;
+                padding: 30px 40px;
+                background-color: #fff;
+                text-align: left;
+                font-size: 20px;
+            }
+            .main-box .right{
+                float: right;
+                width: 80%;
+                padding-left: 0;
+            }
+            .text-input {
+                display: block;
+                height: 55px;
+                padding: 0 15px;
+                background-color: #fff;
+                border: 1px solid #DBE0DF;
+                transition: all 0.3s ease-in-out;
+            }
+            .table{
+                margin-left: auto;
+                margin-right: auto;
             }
         </style>
     </head>
@@ -180,8 +206,8 @@
           {% block content %}
           {% endblock %}
         </div>
-        <div class="footer">
-            <p>Contact us</p>
+        <div class="contact">
+            <a href="/contact" style="color:#000;" >Contact Us</a>
         </div>
     </body>
 </html>
