added static file and made some changes

--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -3,4 +3,11 @@
 {% block pageTitle %}SAFETY ANALYSIS TOOL{% endblock %}
 {% block content %}
 <p>Help Us Make The World a Safer Place</p>
+<style>
+    body{ 
+        background-image: url("{{ url_for('static', filename='Background.jpg') }}");
+        background-size: cover;
+        background-position: center center;
+    } 
+    </style>
 {% endblock %}
