minor changes on the home page

--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -4,10 +4,16 @@
 {% block content %}
 <p>Help Us Make The World a Safer Place</p>
 <style>
+    h1{
+        color: white;
+    }
+    p{
+        color: white;
+    }
     body{ 
         background-image: url("{{ url_for('static', filename='Background.jpg') }}");
         background-size: cover;
         background-position: center center;
     } 
-    </style>
+</style>
 {% endblock %}
