Created new sign in/up page

--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -191,7 +191,7 @@
           <a href="/safetyRelatedData">Safety-related Data</a>
           <a href="/safetyAnalysisTool">Safety Analysis Tool</a>
           <a href="/detailsSys">Details of the System</a>
-          <a href="/">Home</a>
+          <a href="/home">Home</a>
         </div>
 
         <div class="content">
