changed app.py so that it has the user's session data going to every page. changed base and signin html files to work with changes in app.py. removed the old login and register html pages as they are not being used anymore. added the userInfo html file to display the user's account info to the user and allow them to log out on the page.

--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -187,7 +187,7 @@
     </head>
     <body>
         <div class="topnav">
-          <a href="/login">{{usr}}</a>
+          <a href="/">{{usr}}</a>
           <a href="/safetyRelatedData">Safety-related Data</a>
           <a href="/safetyAnalysisTool">Safety Analysis Tool</a>
           <a href="/detailsSys">Details of the System</a>
