--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -132,7 +132,7 @@
             <input type="email" class="input" name="email" placeholder="Email" required>
             <input type="password" class="input" name="password" placeholder="Password" required>
             <button type="submit" name="signin-btn" class="signin-button" value="access">Sign In</button>
-            <button type="submit" class="signin-button">Guest</button>
+            <a href="/home"><button type="submit" class="signin-button">Guest</button></a>
 
             <div class="social-media">
                 <a href="#" class="fa fa-facebook"></a>
