--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -120,6 +120,13 @@
     </style>
 </head>
 <body>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for msg in messages %}
+        <p>{{msg}}</p>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 <div class="container">
 	<div class="form-container">
         <div class="top-area">
