--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -135,7 +135,7 @@
             <button type="button" class="top-button" onclick="signIn()">Sign In</button>
             <button type="button" class="top-button" onclick="signUp()">Sign Up</button>
         </div>
-            <form id = "left" class="signin-form" method="post">
+            <form id = "left" class="signin-form" method="POST" action="">
             <input type="email" class="input" name="email" placeholder="Email" required>
             <input type="password" class="input" name="password" placeholder="Password" required>
             <button type="submit" name="signin-btn" class="signin-button" value="access">Sign In</button>
@@ -147,12 +147,12 @@
                 <a href="#" class="fa fa-google"></a>
             </div>
         </form>
-        <form id = "right"class="signup-form">
-            <input type="text" class="input" placeholder="First Name" required>
-            <input type="text" class="input" placeholder="Last Name" required>
-            <input type="email" class="input" placeholder="Email" required>
-            <input type="password" class="input" placeholder="Password" required>
-            <button type="submit" class="signin-button">Sign Up</button>
+        <form id = "right"class="signup-form" method="POST" action="/up">
+            <input type="text" class="input" name="fname" placeholder="First Name" required>
+            <input type="text" class="input" name="lname" placeholder="Last Name" required>
+            <input type="email" class="input" name="signup-email" placeholder="Email" required>
+            <input type="password" class="input" name="signup-password" placeholder="Password" required>
+            <button type="submit" class="signin-button" name="signup-btn" value="access">Sign Up</button>
         </form>
 
     </div>
