sign up and login route

--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -135,7 +135,7 @@
             <button type="button" class="top-button" onclick="signIn()">Sign In</button>
             <button type="button" class="top-button" onclick="signUp()">Sign Up</button>
         </div>
-            <form id = "left" class="signin-form" method="POST" action="">
+            <form id = "left" class="signin-form" method="POST" action="/">
             <input type="text" class="input" name="email" placeholder="Email" required>
             <input type="text" class="input" name="password" placeholder="Password" required>
             <button type="submit" name="signin-btn" class="signin-button" value="access">Sign In</button>
