changed sign in password text field to type password

--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -137,7 +137,7 @@
         </div>
             <form id = "left" class="signin-form" method="POST" action="/">
             <input type="text" class="input" name="email" placeholder="Email" required>
-            <input type="text" class="input" name="password" placeholder="Password" required>
+            <input type="password" class="input" name="password" placeholder="Password" required>
             <button type="submit" name="signin-btn" class="signin-button" value="access">Sign In</button>
             <a href="/home"><button type="button" class="signin-button">Guest</button></a> 
 
