--- a/proj/templates/signin.html
+++ b/proj/templates/signin.html
@@ -93,6 +93,7 @@
         }
         .signup-form {
             position: relative;
+            margin-top: -20px;
         }
         .input{
             width: 100%;
