--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -4,6 +4,7 @@
         <title>Safety Analysis Tool</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <style>
             * {
                 box-sizing: border-box;
