last few comments added and unnecessary code deleted in several files

--- a/proj/templates/addDataToTable.html
+++ b/proj/templates/addDataToTable.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-<!--{% block user %}<a href="/login">{{usr}}</a>{% endblock %}-->
 {% block pageTitle %}Add Data to a Table{% endblock %}
 {% block content %}
+<!--This is the add data to a table page where you can select the way
+that you would like to add data either by selecting a
+preexisting template: a template of a system that was already made by a user
+OR
+creating a new template: basically redirect to the add a new systems page-->
 <p>Select what you would like to do:</p>
 <p>
   <button class="regular" type="button">Use a Predefined Template</button>
