--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This is the base of the website pages-->
 <html lang="en">
     <head>
         <title>Safety Analysis Tool</title>
