--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -1,3 +1,5 @@
+<!--this is the home page, it was going to have a basic description and
+maybe some links to relevant pages from https://csrc.nist.gov/projects/automated-combinatorial-testing-for-software -->
 {% extends "base.html" %}
 {% block pageTitle %}SAFETY ANALYSIS TOOL{% endblock %}
 {% block content %}
